dnl
dnl configure.in for NeoPZ
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
dnl $Id: configure.in,v 1.22 2004-02-06 22:42:32 erick Exp $
dnl

dnl ----------------------------------------------------------------------------
dnl                              INITIAL CHECKINGS
dnl ----------------------------------------------------------------------------

dnl Checking if we are in the CFD kernel source tree
AC_INIT(PZ.mk.in)

dnl Requires a recent version of autoconf
AC_PREREQ(2.13)

dnl Sets the default prefix instalation (/usr/local/pz)
AC_PREFIX_DEFAULT(/usr/local/pz)

dnl PZ version stuff
PZ_VERSION=2
PZ_REV=0

AC_SUBST(PZ_VERSION)
AC_SUBST(PZ_REV)

dnl Greetings!
PZ_GREETINGS

dnl System variables
AC_CANONICAL_SYSTEM

dnl Elects c++ as the default testing language
AC_LANG_CPLUSPLUS

dnl Initializes automake (must provide aclocal.m4!)
AM_INIT_AUTOMAKE(pz, $PZ_VERSION.$PZ_REV)
AM_SANITY_CHECK

dnl Tests the existance of a c++ compiler (m4 macro)
AC_PROG_CXX

dnl Checks for other common programs (gcc, ar, ranlib and install)
AC_PROG_CC
PZ_PROG_AR
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl ----------------------------------------------------------------------------
dnl                          ARCHITECTURE SPECIFICS     
dnl ----------------------------------------------------------------------------

dnl Determining standard include location and system architecture
case "$target" in
  i*86-*-linux-*)
    ARCH_INCLUDES=
    ;;
  i*86-*-cygwin*)
    ARCH_INCLUDES=
    ;;
  *)
    AC_MSG_ERROR(cannot determine system architecture.)
    ;;
esac

AC_SUBST(ARCH_INCLUDES)

dnl ----------------------------------------------------------------------------
dnl                              COMPILATION MODE
dnl ----------------------------------------------------------------------------

dnl Sets the compilation mode (devel, profiling, opt)
AC_ARG_WITH(compilation-mode,
  [  --with-compilation-mode=MODE
                          'devel' for development (debug)
                          'profiling' for use with gprof
                          'opt' for maximum optimization],
  [comp_mode=$withval],
  [comp_mode=${comp_mode='devel'}])

case "${comp_mode}" in
  devel)
    echo "Development mode chosen. Debug symbols will be added."
    COMPILATION_MODE="Development compilation mode."
    case "$CXX" in
      c++ | g++)
        MODE_OPTIONS="-DDEBUG -Wall -ggdb3 -pipe -fno-default-inline -fno-inline"
        ;;
      *)
        AC_MSG_ERROR(unsupported compiler.)
        ;;
    esac
    ;;
  profiling)
    echo "Profiling mode chosen. Information for gprof will be added."
    COMPILATION_MODE="Profiling compilation mode."
    case "$CXX" in
      c++ | g++)
        MODE_OPTIONS="-DNODEBUG -DNOTDEBUG -Wall -ggdb3 -pg -pipe"
        ;;
      *)
        AC_MSG_ERROR(unsupported compiler.)
        ;;
    esac
    ;;
  opt)
    echo "Optimization mode chosen. Warp 9 Mr. Sulu!"
    COMPILATION_MODE="Optimization compilation mode."
    case "$CXX" in
      c++ | g++)
        dnl Assumed by -O2, but here anyway :)
        dnl   -fthread-jumps -fomit-frame-pointer -fstrength-reduce
        dnl   -fcse-follow-jumps -fcse-skip-blocks -frerun-cse-after-loop
        dnl   -frerun-loop-opt -fgcse -fexpensive-optimizations
        dnl   -fmove-all-movables

	dnl Use -march=`uname -m` with caution!

	dnl For the future:
	dnl -fno-math-errno -funsafe-math-optimizations -fno-trapping-math \
	dnl -mfpmath=sse

        MODE_OPTIONS="-DNOTDEBUG -DNODEBUG -w -s -O2 -march=`uname -m` -fthread-jumps -fomit-frame-pointer -fstrength-reduce -fcse-follow-jumps -fcse-skip-blocks -fexpensive-optimizations -fmove-all-movables -finline-limit=1000 -fdefault-inline -ftemplate-depth-60 -pipe"
        ;;
      *)
        AC_MSG_ERROR(unsupported compiler.)
      ;;
    esac
    ;;
  *)
    AC_MSG_ERROR(bad value ${comp_mode} for --with-compilation-mode)
    ;;
esac

AC_SUBST(COMPILATION_MODE)
AC_SUBST(MODE_OPTIONS)

PZ_CXXFLAGS=$MODE_OPTIONS
PZ_MK="PZ.mk"

AC_SUBST(PZ_CXXFLAGS)
AC_SUBST(PZ_MK)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE MeTiS?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(metis,
  [  --enable-metis=yes      Enables the use of MeTiS [default=no]],
  [metis_enabled=$enableval],
  [metis_enabled="yes"])

case "${metis_enabled}" in
  yes)
    echo "Enabling MeTiS code."
    USING_METIS="-DUSING_METIS"
  ;;
  no)
    echo "MeTiS not chosen."
    USING_METIS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${metis_enabled} for --enable-metis)
  ;;
esac

AM_CONDITIONAL( METIS, test x${metis_enabled} = xyes )

AC_SUBST(USING_METIS)

dnl ----------------------------------------------------------------------------
dnl                               MeTiS LOCATION
dnl ----------------------------------------------------------------------------

dnl MeTiS location
AC_ARG_WITH(metis-dir,
  [  --with-metis-dir=DIR    Root of MeTiS instalation [/usr/local/metis]],
  [metis_dir=$withval],
  [metis_dir=${metis_dir="/usr/local/metis"}])

case "${metis_enabled}" in
  yes)
    METISDIR=$metis_dir
    METISINCLUDE="-I$METISDIR/include"
    METISLIBDIR="-L$METISDIR/lib"
    METISLIB="-lmetis"
  ;;
  no)
    METISDIR=""
    METISINCLUDE=""
    METISLIBDIR=""
    METISLIB=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${metis_enabled} for --enable-metis)
  ;;
esac

AC_SUBST(METISDIR)
AC_SUBST(METISINCLUDE)
AC_SUBST(METISLIBDIR)
AC_SUBST(METISLIB)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE FAD?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(fad,
  [  --enable-fad=no         Enables FAD Automatic differentiation [default=no]],
  [fad_enabled=$enableval],
  [fad_enabled="no"])

case "${fad_enabled}" in
  yes)
    echo "Enabling FAD."
    USING_FAD="-D_AUTODIFF"
  ;;
  no)
    echo "FAD not chosen."
    USING_FAD=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${fad_enabled} for --enable-fad)
  ;;
esac

AM_CONDITIONAL( FAD, test x${fad_enabled} = xyes )

AC_SUBST(USING_FAD)

dnl ----------------------------------------------------------------------------
dnl                               FAD LOCATION
dnl ----------------------------------------------------------------------------

dnl FAD location
AC_ARG_WITH(fad-dir,
  [  --with-fad-dir=DIR      Root of FAD instalation [/usr/local/fad]],
  [fad_dir=$withval],
  [fad_dir=${fad_dir="/usr/local/fad"}])

case "${fad_enabled}" in
  yes)
    FADDIR=$fad_dir
    FADINCLUDE="-I$FADDIR"
    FADINCLUDE_FAD="-I$FADDIR/Fad"
    FADINCLUDE_TFAD="-I$FADDIR/TinyFad"
    FADINCLUDE_TFADET="-I$FADDIR/TinyFadET"
  ;;
  no)
    FADDIR=""
    FADINCLUDE=""
    FADINCLUDE_FAD=""
    FADINCLUDE_TFAD=""
    FADINCLUDE_TFADET=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${fad_dir} for --with-fad-dir)
  ;;
esac

AC_SUBST(FADDIR)
AC_SUBST(FADINCLUDE)
AC_SUBST(FADINCLUDE_FAD)
AC_SUBST(FADINCLUDE_TFAD)
AC_SUBST(FADINCLUDE_TFADET)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE Sloan
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(sloan,
  [  --enable-sloan          Enables the use of Sloan],
  [sloan_enabled=$enableval],
  [sloan_enabled="no"])

case "${sloan_enabled}" in
  yes)
    echo "Enabling Sloan code."
    USING_SLOAN="-DUSING_SLOAN"
  ;;
  no)
    echo "Sloan not chosen."
    USING_SLOAN=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${sloan_enabled} for --enable-sloan)
  ;;
esac

AC_SUBST(USING_SLOAN)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE atlas?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(atlas,
  [  --enable-atlas=no       Enables the use of atlas [default=no]],
  [atlas_enabled=$enableval],
  [atlas_enabled="no"])

case "${atlas_enabled}" in
  yes)
    echo "Enabling atlas code."
    USING_ATLAS="-DUSING_ATLAS"
  ;;
  no)
    echo "atlas not chosen."
    USING_ATLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${atlas_enabled} for --enable-atlas)
  ;;
esac

AM_CONDITIONAL( atlas, test x${atlas_enabled} = xyes )

AC_SUBST(USING_ATLAS)

dnl ----------------------------------------------------------------------------
dnl                               atlas LOCATION
dnl ----------------------------------------------------------------------------

dnl atlas location
AC_ARG_WITH(atlas-dir,
  [  --with-atlas-dir=DIR    Root of atlas instalation [/usr/local/atlas]] -> Normally something like /usr/local/ATLAS/lib/<SomeLinuxArchitecture>,
  [atlas_dir=$withval],
  [atlas_dir=${atlas_dir="/usr/local/atlas"}])

case "${atlas_enabled}" in
  yes)
    ATLASDIR=$atlas_dir
    ATLASINCLUDE="-I$ATLASDIR/../../include"
    ATLASLIBDIR="-L$ATLASDIR"
    ATLASLIB="-latlas"
    LIBATLAS="$ATLASDIR/libcblas.a $ATLASDIR/liblapack.a $ATLASDIR/libatlas.a"
  ;;
  no)
    ATLASDIR=""
    ATLASINCLUDE=""
    ATLASLIBDIR=""
    ATLASLIB=""
    LIBATLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${atlas_enabled} for --enable-atlas)
  ;;
esac

AC_SUBST(ATLASDIR)
AC_SUBST(ATLASINCLUDE)
AC_SUBST(ATLASLIBDIR)
AC_SUBST(ATLASLIB)
AC_SUBST(LIBATLAS)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE BLAS?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(blas,
  [  --enable-blas=no       Enables the use of blas [default=no]],
  [blas_enabled=$enableval],
  [blas_enabled="no"])

case "${blas_enabled}" in
  yes)
    echo "Enabling BLAS."
    USING_BLAS="-DUSING_BLAS"
  ;;
  no)
    echo "blas not chosen."
    USING_BLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${blas_enabled} for --enable-blas)
  ;;
esac

AM_CONDITIONAL( blas, test x${blas_enabled} = xyes )

AC_SUBST(USING_BLAS)

dnl ----------------------------------------------------------------------------
dnl                               blas LOCATION
dnl ----------------------------------------------------------------------------

dnl blas location
AC_ARG_WITH(blas-dir,
  [  --with-blas-dir=DIR    Root of blas instalation [/usr/lib]],
  [blas_dir=$withval],
  [blas_dir=${blas_dir="/usr/lib/"}])

case "${blas_enabled}" in
  yes)
    BLASDIR=$blas_dir
    BLASINCLUDE="-I$BLASDIR/src/"
    BLASLIBDIR="-L/usr/lib/"
    BLASLIB="-s -llapack -lcblas -lblas"
    LIBBLAS=" -s /usr/lib/liblapack.so /usr/lib/libcblas.a /usr/lib/libblas.a"
  ;;
  no)
    BLASDIR=""
    BLASINCLUDE=""
    BLASLIBDIR=""
    BLASLIB=""
    LIBBLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${blas_enabled} for --enable-blas)
  ;;
esac

AC_SUBST(BLASDIR)
AC_SUBST(BLASINCLUDE)
AC_SUBST(BLASLIBDIR)
AC_SUBST(BLASLIB)
AC_SUBST(LIBBLAS)

dnl ----------------------------------------------------------------------------
dnl                                  CLEANING
dnl ----------------------------------------------------------------------------

PZ_DISTCLEANFILES="*~ *.h.ps *.cc.ps *.gcov *.bb *.bbg *.da gmon.out core octave-core wrong *.info *.prof"

PZ_CLEANFILES="*~ core octave-core *.o *.info"

AC_SUBST(PZ_DISTCLEANFILES)
AC_SUBST(PZ_CLEANFILES)

dnl ----------------------------------------------------------------------------
dnl                              CONGRATULATIONS!
dnl ----------------------------------------------------------------------------

AC_OUTPUT([ Makefile PZ.mk PZ_user.mk \
dnl --| PZ subtree |--
	Util/Makefile \
	Matrix/Makefile \
	Cosys/Makefile \
	Multigrid/Makefile \
	Material/Makefile \
	Post/Makefile \
	Shape/Makefile \
	Integral/Makefile \
	Geom/Makefile \
	Mesh/Makefile \
	Refine/Makefile \
	External/Makefile \
	Analysis/Makefile \
	Frontal/Makefile \
	StrMatrix/Makefile \
	Pre/Makefile \
	Common/Makefile \
	LinearSolvers/Makefile \
	lib/Makefile \
dnl --| Projects subtree |--
	Projects/Makefile \
        Projects/DiffusionTest/Makefile \
	Projects/adaptivity/Makefile \
	Projects/angletest/Makefile \
	Projects/checkcont/Makefile \
	Projects/checkconv/Makefile \
	Projects/cycleref/Makefile \
	Projects/cylin/Makefile \
	Projects/materialhyperelastico/Makefile \
	Projects/matrix/Makefile \
	Projects/multplaca/Makefile \
	Projects/placyl/Makefile \
	Projects/pzvc/Makefile \
	Projects/qualif/Makefile \
	Projects/sorting/Makefile \
	Projects/termica/Makefile \
	Projects/teste/Makefile \
	Projects/testeisotropia/Makefile \
	Projects/testgeom/Makefile \
	Projects/testmat/Makefile \
	Projects/testshape/Makefile \
	Projects/viga3d/Makefile \
	Projects/descontinuo/Makefile \
	Projects/PoissonFAD/Makefile \
	Projects/HyperElasticityFAD/Makefile \
	Projects/ShapeFAD/Makefile \
	Projects/Adapt_MultThread/Makefile \
        Projects/Descontinuo2/Makefile \
	Projects/ConsLaw/Makefile \
	Projects/Igor/Makefile \
	Projects/CursoPZ/Makefile \
	Projects/CursoPZ/Class_1/Makefile \
	Projects/CursoPZ/Class_2/Makefile \
	Projects/CursoPZ/Class_3/Makefile \
	Projects/CursoPZ/Class_4/Makefile \
	Projects/CursoPZ/Class_5/Makefile \
	Projects/CursoPZ/FinalWorks/Makefile \
	Projects/CursoPZ/FinalWorks/TiagoForti/Makefile \
	Projects/CursoPZ/FinalWorks/ErickSlis/Makefile \
	Projects/CursoPZ/FinalWorks/Longhin/Makefile \
	Projects/CursoPZ/FinalWorks/CesarRylo/Makefile \
	Projects/CursoPZ/FinalWorks/RGDamas/Makefile \


])

PZ_BYEBYE

dnl --| NeoPZ |-----------------------------------------------------------------
